[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mxp"
version = "0.1.0"
description = "High-performance protocol for agent-to-agent communication"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["mxp", "agents", "ai", "protocol", "performance"]
authors = [
    { name = "YAFA Cloud Services LLC", email = "support@yafa.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://getmxp.xyz"
Repository = "https://github.com/yafatek/mxp-protocol"
Documentation = "https://docs.getmxp.xyz"

[tool.maturin]
python-source = "python"
module-name = "mxp.mxp"
features = ["pyo3/extension-module"]
